메뉴 바 폰트 사이즈 조정

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -157,7 +157,7 @@
 			const bar = document.querySelector(".menuBarArea");
 
 			bar.style.height = `${0.095 * parseInt(map.style.height)}px`;
-			console.log(`브라우저 세로 길이: ${bar.style.height}`);
+			// console.log(`브라우저 세로 길이: ${bar.style.height}`);
 		});
 	</script>
 
