--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -49,7 +49,7 @@
 	background-color: #f6f6f67e;
 }
 .menuBarBtn button {
-	font-size: 20px;
+	font-size: 1.5vw;
 }
 
 /* 선택된 메뉴 */
@@ -67,14 +67,15 @@
 	transition-duration: 0.5s;
 }
 .selectedBtn button {
-	font-size: 20px;
+	font-size: 1.5vw;
 }
 
 .menu {
+	width: auto;
 	margin: 2px 0 0 3px;
 	font-weight: bold;
 	font-family: "BMNanum Gothic";
-	font-size: 20px;
+	font-size: 1.5vw;
 }
 
 .radioBtnImg {
