--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -49,7 +49,7 @@
 	background-color: #f6f6f67e;
 }
 .menuBarBtn button {
-	font-size: 1.5vw;
+	font-size: 18px;
 }
 
 /* 선택된 메뉴 */
@@ -67,7 +67,7 @@
 	transition-duration: 0.5s;
 }
 .selectedBtn button {
-	font-size: 1.5vw;
+	font-size: 18px;
 }
 
 .menu {
@@ -75,7 +75,7 @@
 	margin: 2px 0 0 3px;
 	font-weight: bold;
 	font-family: "BMNanum Gothic";
-	font-size: 1.5vw;
+	font-size: 18px;
 }
 
 .radioBtnImg {
