eqData.js 지진 마커 숨기기

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -37,7 +37,7 @@
 						<div
 							id="weatherBtn"
 							class="selectedBtn"
-							onclick="selectWeatherBtn(event)"
+							onclick="selectWeatherBtn(event), eqClose()"
 						>
 							<img
 								src="../img/icon_radioactivity_mono.png"
