--- a/src/main/resources/templates/test/testContourmap.html
+++ b/src/main/resources/templates/test/testContourmap.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-  <button onclick="eqDataPush()">이곳을 누르세요</button>
   <div id="myDiv" style="width: 600px; height: 600px;"></div>
 
 </body>
 
-
+<script></script>
 <script th:inline="none">
 
-  const eqDataPush = async () => {
+  window.onload = eqDataPush = async () => {
     const year = "2023";
     const yeardata = await fetch(`/yearsearch?year=${year}`);
+
     const res = await yeardata.text();
     const eqJson = JSON.parse(res); // json 형식으로 읽기
 
