--- a/src/main/resources/templates/test/testpinmap.html
+++ b/src/main/resources/templates/test/testpinmap.html
@@ -31,6 +31,8 @@
 		<h1>[[${earthqlist}]]</h1>
 	</div>
 	<div id="container"></div>
+
+	<img src="test2" alt="">
 </body>
 
 <!-- 지도용 script -->
@@ -78,6 +80,56 @@
 			marker.setMap(map);
 		}
 	};
+
+
+
+	function GroundOverlay(bounds, imgSrc) {
+		this.bounds = bounds;
+		var node = this.node = document.createElement('div');
+		node.className = 'node';
+
+		var img = this.img = document.createElement('img');
+		img.style.position = 'absolute';
+		img.src = imgSrc;
+
+		node.appendChild(img);
+	}
+
+	GroundOverlay.prototype = new kakao.maps.AbstractOverlay;
+
+	GroundOverlay.prototype.onAdd = function () {
+		var panel = this.getPanels().overlayLayer;
+		panel.appendChild(this.node);
+	};
+
+	// 줌인 아웃 시 이미지를 원하는 bounds값에 맞게 표출하기 위해 img style을 정의 및 선언합니다.
+	GroundOverlay.prototype.draw = function () {
+		var projection = this.getProjection();
+		var ne = projection.pointFromCoords(this.bounds.getNorthEast());
+		var sw = projection.pointFromCoords(this.bounds.getSouthWest());
+
+		var width = ne.x - sw.x;
+		var height = sw.y - ne.y;
+
+		this.img.style.top = ne.y + 'px';
+		this.img.style.left = sw.x + 'px';
+		this.img.style.width = width + 'px';
+		this.img.style.height = height + 'px';
+	}
+
+	GroundOverlay.prototype.onRemove = function () {
+		this.node.parentNode.removeChild(this.node);
+	};
+
+	// LatLng, LatLngBounds 를 사용하는 코드로 변경해야 함.
+	var sw = new kakao.maps.LatLng(37.503, 127.022581);
+	ne = new kakao.maps.LatLng(37.5, 127.028581);
+
+	var bounds = new kakao.maps.LatLngBounds(sw, ne);
+
+	var overlay = new GroundOverlay(bounds, 'http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/roadviewoverlay_img_02.png');
+	overlay.setMap(map);
+
 </script>
 
 
