날씨 아이콘 테스트

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -40,7 +40,7 @@
 							onclick="selectWeatherBtn(event), radioClose(),eqClose()"
 						>
 							<img
-								src="../img/icon_radioactivity_mono.png"
+								src="../img/icon_weather2.png"
 								alt="noRadioBtnImg"
 								class="radioBtnImg"
 							/>
