--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -205,15 +205,15 @@
 	background-color: rgb(255, 255, 255);
 	display: flex;
 	flex-direction: row;
-	position: relative;
+	position: absolute;
 	justify-content: space-evenly;
 	z-index: 3;
 	width: 400px;
 	height: 45px;
 	border: 0;
 	border-radius: 15px;
-	bottom: -92.5%;
-	right: -70.5%;
+	bottom: 1%;
+	right: 0.7%;
 	align-items: center;
 }
 /* 지진 마커 */
@@ -221,15 +221,15 @@
 	background-color: rgb(255, 255, 255);
 	display: flex;
 	flex-direction: row;
-	position: relative;
+	position: absolute;
 	justify-content: space-evenly;
 	z-index: 3;
 	width: 400px;
 	height: 45px;
 	border: 0;
 	border-radius: 15px;
-	bottom: -92.5%;
-	right: -70.5%;
+	bottom: 1%;
+	right: 0.7%;
 	align-items: center;
 }
 .markerInfo {
