--- a/src/main/resources/templates/test/testpinmap.html
+++ b/src/main/resources/templates/test/testpinmap.html
@@ -127,7 +127,7 @@
 
 	var bounds = new kakao.maps.LatLngBounds(sw, ne);
 
-	var overlay = new GroundOverlay(bounds, 'http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/roadviewoverlay_img_02.png');
+	var overlay = new GroundOverlay(bounds, 'C:/Users/user/Downloads/다운로드.png');
 	overlay.setMap(map);
 
 </script>
