더스트추가

--- a/src/main/resources/templates/dust/dust.html
+++ b/src/main/resources/templates/dust/dust.html
@@ -20,11 +20,11 @@
 <script>
 
     $.ajax({
-        url: "https://apis.data.go.kr/B090026/AirqualityService/getIvstg",
+        url: "http://apis.data.go.kr/B090026/AirqualityService/getIvstg",
         type: "GET",
         data: {
             serviceKey: decodeURIComponent("hJTB216fgxJvb4xBUrezsnj5a3t9SK2agGIh3ylsYKRWnw4old3h5dlO7C0SGwym6r6kloZtx4TodqBnzrLu8w%3D%3D"),
-            mgtNo: "ND2010A001",
+            mgtNo: "ND2019B002",
             type: "json"
         },
         success: function (data) {
