--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -14,15 +14,15 @@
 /* 메뉴 바 영역 */
 .menuBarArea {
 	width: 185px;
-	height: 9.5%;
+	height: 8.5%;
 	background-color: #5ea8c8e1;
 	/* #5ea8c8e1 */
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	margin: 10px;
-	padding: 65px 0 10px 10px;
+	margin: 10px 10px 0 10px;
+	padding: 65px 0 0 10px;
 	box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(216, 216, 216, 0.173);
 	position: absolute;
 	z-index: 3;
